# vite-poc

./: README.md  package-lock.json  package.json  vite.config.ts
src/ui/: .npmignore  .npmrc  .prettierrc.js  BUILD.bazel  README.md  jest.config.js  package.json  setupTests.ts  styleguide.config.js  tsconfig.bzl.json  tsconfig.jest.json  tsconfig.json
src/ui/.storybook/: main.ts  preview.tsx  style.css
src/ui/src/: BUILD  constants.ts  costApis.ts  dmmApis.ts  dmmConfiguration.ts  featureSetApis.ts  featuresetConfiguration.ts  index.ts  util.ts
src/ui/src/admin-dataplanes/: index.ts
src/ui/src/admin-executions/: README.md  index.ts
src/ui/src/admin-external-data-volumes/: index.ts
src/ui/src/admin-hardwareTier/: README.md  index.ts
src/ui/src/admin-jira/: index.ts
src/ui/src/core/: User.ts  (+10 more)
src/ui/stories/: AddClusterButton.stories.tsx  AddGitCredentialsModal.stories.tsx  AddGitRepoContent.stories.tsx  AddGitRepoModal.stories.tsx  ApiKeyGenerator.stories.tsx  ApiKeySettingsPanel.stories.tsx  ArbitraryHostingSettings.stories.tsx  ArchiveModelButton.stories.tsx  AreaSpline.stories.tsx  BUILD  BulkMoveTree.stories.tsx  CompactTable.stories.tsx  ComputeEnvironmentDropdown.stories.tsx  ComputeEnvironmentSelector.stories.tsx  ComputeGridExecutionsTable.stories.tsx  ComputeGridHardwareTierTable.stories.tsx  ComputeGridInfrastructureTable.stories.tsx  ConfirmStopRunModal.stories.tsx  CopyToClipboardButton.stories.tsx  CreateDataSetFromFilesModal.stories.tsx  DDFormItem.stories.tsx  DataDriftTable.stories.tsx  DataDriftTableContainer.stories.tsx  DeploymentsTable.stories.tsx  EditGitRepoContent.stories.tsx  EditableFilePath.stories.tsx  EmptyArrowUpDownButtons.stories.tsx  ExternalDataVolumes.stories.tsx  FileBrowserActionBar.stories.tsx  FileBrowserTable.stories.tsx  FileNameEditor.stories.tsx  FileView.stories.tsx  FormattedForm.stories.tsx  FullDeleteModal.stories.tsx  GitCredentialsPanel.stories.tsx  GitCredentialsSummaryTable.stories.tsx  GitRepoTable.stories.tsx  HardwareConfiguration.stories.tsx  HardwareTierSelect.stories.tsx  HelperTextPanel.stories.tsx  (+21 more)
src/ui/styleguide/: ThemeWrapper.tsx
src/ui/tests/: AddClusterButton.test.tsx  AddComment.test.tsx  ArchiveProject.test.tsx  BUILD  FileView.test.tsx  LinkGoal.test.tsx  RestartableLauncher.test.tsx  WithFileSearch.test.tsx  confirmRedirectToLogin.test.tsx
(+1231 files in other folders)
